src/main/java/clang/ClangLibrary.java

	/**
	 * \brief Retrieve the last modification time of the given file.<br>
	 * Original signature : <code>time_t clang_getFileTime(CXFile)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:273</i>
	 */
	ClangLibrary.time_t clang_getFileTime(Pointer SFile);
	/**
	 * \brief Determine whether the given header is guarded against<br>
	 * multiple inclusions, either with the conventional<br>
	 * \#ifndef/\#define/\#endif macro guards or with \#pragma once.<br>
	 * Original signature : <code>int clang_isFileMultipleIncludeGuarded(CXTranslationUnit, CXFile)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:280</i>
	 */
	int clang_isFileMultipleIncludeGuarded(ClangLibrary.CXTranslationUnit tu, Pointer file);
	/**
	 * \brief Retrieve a file handle within the given translation unit.<br>
	 * * \param tu the translation unit<br>
	 * * \param file_name the name of the file.<br>
	 * * \returns the file handle for the named file in the translation unit \p tu,<br>
	 * or a NULL file handle if the file was not a part of this translation unit.<br>
	 * Original signature : <code>CXFile clang_getFile(CXTranslationUnit, const char*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:293</i><br>
	 * @deprecated use the safer methods {@link #clang_getFile(clang.ClangLibrary.CXTranslationUnit, java.lang.String)} and {@link #clang_getFile(clang.ClangLibrary.CXTranslationUnit, com.sun.jna.Pointer)} instead
	 */
	@Deprecated
	Pointer clang_getFile(ClangLibrary.CXTranslationUnit tu, Pointer file_name);
	/**
	 * \brief Retrieve a file handle within the given translation unit.<br>
	 * * \param tu the translation unit<br>
	 * * \param file_name the name of the file.<br>
	 * * \returns the file handle for the named file in the translation unit \p tu,<br>
	 * or a NULL file handle if the file was not a part of this translation unit.<br>
	 * Original signature : <code>CXFile clang_getFile(CXTranslationUnit, const char*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:293</i>
	 */
	Pointer clang_getFile(ClangLibrary.CXTranslationUnit tu, String file_name);
	/**
	 * \brief Retrieve a NULL (invalid) source location.<br>
	 * Original signature : <code>CXSourceLocation clang_getNullLocation()</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:340</i>
	 */
	CXSourceLocation.ByValue clang_getNullLocation();
	/**
	 * \brief Determine whether two source locations, which must refer into<br>
	 * the same translation unit, refer to exactly the same point in the source<br>
	 * code.<br>
	 * * \returns non-zero if the source locations refer to the same location, zero<br>
	 * if they refer to different locations.<br>
	 * Original signature : <code>int clang_equalLocations(CXSourceLocation, CXSourceLocation)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:350</i>
	 */
	int clang_equalLocations(CXSourceLocation.ByValue loc1, CXSourceLocation.ByValue loc2);
	/**
	 * \brief Retrieves the source location associated with a given file/line/column<br>
	 * in a particular translation unit.<br>
	 * Original signature : <code>CXSourceLocation clang_getLocation(CXTranslationUnit, CXFile, unsigned, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:357</i>
	 */
	CXSourceLocation.ByValue clang_getLocation(ClangLibrary.CXTranslationUnit tu, Pointer file, int line, int column);
	/**
	 * \brief Retrieves the source location associated with a given character offset<br>
	 * in a particular translation unit.<br>
	 * Original signature : <code>CXSourceLocation clang_getLocationForOffset(CXTranslationUnit, CXFile, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:365</i>
	 */
	CXSourceLocation.ByValue clang_getLocationForOffset(ClangLibrary.CXTranslationUnit tu, Pointer file, int offset);
	/**
	 * \brief Retrieve a NULL (invalid) source range.<br>
	 * Original signature : <code>CXSourceRange clang_getNullRange()</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:372</i>
	 */
	CXSourceRange.ByValue clang_getNullRange();
	/**
	 * \brief Retrieve a source range given the beginning and ending source<br>
	 * locations.<br>
	 * Original signature : <code>CXSourceRange clang_getRange(CXSourceLocation, CXSourceLocation)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:378</i>
	 */
	CXSourceRange.ByValue clang_getRange(CXSourceLocation.ByValue begin, CXSourceLocation.ByValue end);
	/**
	 * \brief Determine whether two ranges are equivalent.<br>
	 * * \returns non-zero if the ranges are the same, zero if they differ.<br>
	 * Original signature : <code>int clang_equalRanges(CXSourceRange, CXSourceRange)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:386</i>
	 */
	int clang_equalRanges(CXSourceRange.ByValue range1, CXSourceRange.ByValue range2);
	/**
	 * \brief Returns non-zero if \p range is null.<br>
	 * Original signature : <code>int clang_Range_isNull(CXSourceRange)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:392</i>
	 */
	int clang_Range_isNull(CXSourceRange.ByValue range);
	/**
	 * \brief Retrieve the file, line, column, and offset represented by<br>
	 * the given source location.<br>
	 * * If the location refers into a macro expansion, retrieves the<br>
	 * location of the macro expansion.<br>
	 * * \param location the location within a source file that will be decomposed<br>
	 * into its parts.<br>
	 * * \param file [out] if non-NULL, will be set to the file to which the given<br>
	 * source location points.<br>
	 * * \param line [out] if non-NULL, will be set to the line to which the given<br>
	 * source location points.<br>
	 * * \param column [out] if non-NULL, will be set to the column to which the given<br>
	 * source location points.<br>
	 * * \param offset [out] if non-NULL, will be set to the offset into the<br>
	 * buffer to which the given source location points.<br>
	 * Original signature : <code>void clang_getExpansionLocation(CXSourceLocation, CXFile*, unsigned*, unsigned*, unsigned*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:416</i><br>
	 * @deprecated use the safer methods {@link #clang_getExpansionLocation(clang.CXSourceLocation.ByValue, com.sun.jna.Pointer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #clang_getExpansionLocation(clang.CXSourceLocation.ByValue, com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated
	void clang_getExpansionLocation(CXSourceLocation.ByValue location, Pointer file, IntByReference line, IntByReference column, IntByReference offset);
	/**
	 * \brief Retrieve the file, line, column, and offset represented by<br>
	 * the given source location.<br>
	 * * If the location refers into a macro expansion, retrieves the<br>
	 * location of the macro expansion.<br>
	 * * \param location the location within a source file that will be decomposed<br>
	 * into its parts.<br>
	 * * \param file [out] if non-NULL, will be set to the file to which the given<br>
	 * source location points.<br>
	 * * \param line [out] if non-NULL, will be set to the line to which the given<br>
	 * source location points.<br>
	 * * \param column [out] if non-NULL, will be set to the column to which the given<br>
	 * source location points.<br>
	 * * \param offset [out] if non-NULL, will be set to the offset into the<br>
	 * buffer to which the given source location points.<br>
	 * Original signature : <code>void clang_getExpansionLocation(CXSourceLocation, CXFile*, unsigned*, unsigned*, unsigned*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:416</i>
	 */
	void clang_getExpansionLocation(CXSourceLocation.ByValue location, Pointer file, IntBuffer line, IntBuffer column, IntBuffer offset);
	/**
	 * \brief Retrieve the file, line, column, and offset represented by<br>
	 * the given source location, as specified in a # line directive.<br>
	 * * Example: given the following source code in a file somefile.c<br>
	 * * \code<br>
	 * #123 "dummy.c" 1<br>
	 * * static int func(void)<br>
	 * {<br>
	 *     return 0;<br>
	 * }<br>
	 * \endcode<br>
	 * * the location information returned by this function would be<br>
	 * * File: dummy.c Line: 124 Column: 12<br>
	 * * whereas clang_getExpansionLocation would have returned<br>
	 * * File: somefile.c Line: 3 Column: 12<br>
	 * * \param location the location within a source file that will be decomposed<br>
	 * into its parts.<br>
	 * * \param filename [out] if non-NULL, will be set to the filename of the<br>
	 * source location. Note that filenames returned will be for "virtual" files,<br>
	 * which don't necessarily exist on the machine running clang - e.g. when<br>
	 * parsing preprocessed output obtained from a different environment. If<br>
	 * a non-NULL value is passed in, remember to dispose of the returned value<br>
	 * using \c clang_disposeString() once you've finished with it. For an invalid<br>
	 * source location, an empty string is returned.<br>
	 * * \param line [out] if non-NULL, will be set to the line number of the<br>
	 * source location. For an invalid source location, zero is returned.<br>
	 * * \param column [out] if non-NULL, will be set to the column number of the<br>
	 * source location. For an invalid source location, zero is returned.<br>
	 * Original signature : <code>void clang_getPresumedLocation(CXSourceLocation, CXString*, unsigned*, unsigned*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:462</i><br>
	 * @deprecated use the safer methods {@link #clang_getPresumedLocation(clang.CXSourceLocation.ByValue, clang.CXString, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #clang_getPresumedLocation(clang.CXSourceLocation.ByValue, clang.CXString, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated
	void clang_getPresumedLocation(CXSourceLocation.ByValue location, CXString filename, IntByReference line, IntByReference column);
	/**
	 * \brief Retrieve the file, line, column, and offset represented by<br>
	 * the given source location, as specified in a # line directive.<br>
	 * * Example: given the following source code in a file somefile.c<br>
	 * * \code<br>
	 * #123 "dummy.c" 1<br>
	 * * static int func(void)<br>
	 * {<br>
	 *     return 0;<br>
	 * }<br>
	 * \endcode<br>
	 * * the location information returned by this function would be<br>
	 * * File: dummy.c Line: 124 Column: 12<br>
	 * * whereas clang_getExpansionLocation would have returned<br>
	 * * File: somefile.c Line: 3 Column: 12<br>
	 * * \param location the location within a source file that will be decomposed<br>
	 * into its parts.<br>
	 * * \param filename [out] if non-NULL, will be set to the filename of the<br>
	 * source location. Note that filenames returned will be for "virtual" files,<br>
	 * which don't necessarily exist on the machine running clang - e.g. when<br>
	 * parsing preprocessed output obtained from a different environment. If<br>
	 * a non-NULL value is passed in, remember to dispose of the returned value<br>
	 * using \c clang_disposeString() once you've finished with it. For an invalid<br>
	 * source location, an empty string is returned.<br>
	 * * \param line [out] if non-NULL, will be set to the line number of the<br>
	 * source location. For an invalid source location, zero is returned.<br>
	 * * \param column [out] if non-NULL, will be set to the column number of the<br>
	 * source location. For an invalid source location, zero is returned.<br>
	 * Original signature : <code>void clang_getPresumedLocation(CXSourceLocation, CXString*, unsigned*, unsigned*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:462</i>
	 */
	void clang_getPresumedLocation(CXSourceLocation.ByValue location, CXString filename, IntBuffer line, IntBuffer column);
